--- a/install
+++ b/install
@@ -26,7 +26,7 @@ instala_riso() {
     echo "Instalando Cliente (RISO)..."
     
     echo "Baixando dependências..."
-    apt-get install -y rtorrent screen ntfsprogs dialog
+    apt-get install -y avahi-utils rtorrent screen ntfsprogs dialog
     
     echo "Criando árvore de diretórios..."
     mkdir -p /usr/riso
@@ -52,7 +52,7 @@ instala_risos() {
     passwd root
     
     echo "Baixando dependências..."
-    apt-get install -y avahi-daemon bittorrent rtorrent screen ntfsprogs ssh dialog
+    apt-get install -y avahi-utils avahi-daemon bittorrent rtorrent screen ntfsprogs ssh dialog
     
     echo "Criando árvore de diretórios..."
     mkdir -p /usr/riso
@@ -66,6 +66,10 @@ instala_risos() {
     echo "Movendo script..."
     cp ./src/risos /usr/riso/risos
     chmod +x /usr/riso/risos
+    
+    echo "Gerando chaves rsa..."
+    ssh-keygen -t 'rsa' -f '/root/.ssh/id_rsa' -N ''
+    su -c "cat /root/.ssh/id_rsa.pub >> /root/.ssh/authorized_keys2"
     
     echo "Criando arquivo de configuração..."
     echo -n "Qual a partição em que o sistema de recuperação foi instalado(Ex: /dev/sda4):"
