--- a/install
+++ b/install
@@ -73,7 +73,7 @@ instala_risos() {
     ssh-keygen -t 'rsa' -f '/root/.ssh/id_rsa' -N ''
     su -c "cat /root/.ssh/id_rsa.pub >> /root/.ssh/authorized_keys2"
     
-    echo "Criando arquivo de configuração..."
+    echo "Criando variáveis de configuração..."
     echo -n "Qual a partição em que o sistema de recuperação foi instalado(Ex: /dev/sda4):"
     read partrec
     echo -n "Qual a partição em que o Windows foi instalado(Ex: /dev/sda1):"
@@ -82,6 +82,22 @@ instala_risos() {
     read partlinux
     echo -n "Qual a partição em que o área de troca(swap) foi instalado(Ex: /dev/sda3):"
     read partswap
+    
+    umount /dev/mnt 2> /dev/null
+    mount ${partrec} /mnt
+    sa_partrec=`df -T ${partrec} | awk 'NR==2{print $2}'`
+    
+    umount /dev/mnt 2> /dev/null
+    mount ${partlinux} /mnt
+    sa_partlinux=`df -T ${partlinux} | awk 'NR==2{print $2}'`
+    
+    umount /dev/mnt 2> /dev/null
+    mount ${partwindows} /mnt
+    sa_partwindows=`df -T ${partwindows} | awk 'NR==2{print $2}'`
+
+    umount /dev/mnt 2> /dev/null
+    
+    echo "Criando arquivo de configuração..."
     echo '<?xml version="1.0" standalone="no"?><!--*-nxml-*-->' > /etc/avahi/services/riso.service
     echo '<!DOCTYPE service-group SYSTEM "avahi-service.dtd">' >> /etc/avahi/services/riso.service
     echo '' >> /etc/avahi/services/riso.service
@@ -102,6 +118,11 @@ instala_risos() {
     echo '' >> /etc/avahi/services/riso.service
     echo '    <!--Campo não é usado-->' >> /etc/avahi/services/riso.service
     echo '    <port>1234</port>' >> /etc/avahi/services/riso.service
+    echo '' >> /etc/avahi/services/riso.service
+    echo '    <!--Variáveis com sistema de arquivo das partições-->' >> /etc/avahi/services/riso.service
+    echo "    <txt-record>sa_partrec=${sa_partrec}</txt-record>" >> /etc/avahi/services/riso.service
+    echo "    <txt-record>sa_partlinux=${sa_partlinux}</txt-record>" >> /etc/avahi/services/riso.service
+    echo "    <txt-record>sa_partwindows=${sa_partwindows}</txt-record>" >> /etc/avahi/services/riso.service
     echo '' >> /etc/avahi/services/riso.service
     echo '    <!--Variáveis com tamanho das imagens geradas no servidor-->' >> /etc/avahi/services/riso.service
     echo '    <txt-record>tamlinux=123456789</txt-record>' >> /etc/avahi/services/riso.service
