--- a/install
+++ b/install
@@ -98,7 +98,7 @@ instala_risos() {
     sed s/'#GRUB_DISABLE_LINUX_RECOVERY="true"'/'GRUB_DISABLE_LINUX_RECOVERY="true"'/g -i /etc/default/grub
     rm -f /etc/grub.d/20_memtest86+
     mv /etc/grub.d/10_linux /etc/grub.d/50_linux
-    update-grub -y
+    update-grub
     
     #Cria riso.service
     echo "Criando arquivo de configuração..."
