--- a/install
+++ b/install
@@ -7,6 +7,16 @@
 dep_cli="avahi-utils rtorrent screen ntfsprogs ssh"
 dep_ser="avahi-utils avahi-daemon bittorrent rtorrent screen ntfsprogs grub2 ssh coreutils mkisofs genisoimage findutils bash passwd sed squashfs-tools casper rsync mount eject libdebian-installer4 os-prober ubiquity user-setup discover1 discover laptop-detect syslinux xterm util-linux xresprobe cdrecord"
 
+# modificaçao -- dessabila o UUID no ubuntu
+DisableUUID(){ 
+b=`cat /boot/grub/grub.cfg | grep =UUID=`
+uuidUbuntu=`(cut -d ' ' -f3 | cut -d '=' -f2-3)<<<${b}`
+partLinux=`os-prober | grep linux | cut -d ':' -f1` 
+
+sed "s|${uuidUbuntu}|${partLinux}|g" -i /boot/grub/grub.cfg
+
+}
+
 menu() {
     apt-get install -y dialog
 	opcao=$( dialog --stdout \
@@ -42,16 +52,20 @@ instala_riso() {
     
     echo "Movendo script..."
     cp ./src/riso /usr/riso/riso
+    cp ./src/quitRTorrent.sh /usr/riso/quitRTorrent.sh
+    chmod +x /usr/riso/quitRTorrent.sh
     chmod +x /usr/riso/riso
     cp ./conf/riso.conf /usr/riso/riso.conf
-    
+    cp ./conf/.rtorrent.rc /root    
+
     echo "Sistema instalado com sucesso."
     echo "Tente digitar 'riso' para iniciar."
 }
 
 instala_risos() {
     echo "Instalando Servidor (RISOS)..."
-    
+    servidor=`ip route | grep src | cut -d ' ' -f12`  
+        
     echo "Liberando login como root..."
     echo -n "root:" > /etc/shadow.tmp
     pass=`cat /etc/shadow | grep \`who | awk 'NR==1{print $1}'\` | cut -d':' -f2`
@@ -94,7 +108,7 @@ instala_risos() {
     sa_partwindows=`blkid ${partwindows} | cut -d'"' -f4`
     
     #Prepara grub2
-    sed s/'GRUB_DEFAULT=0'/'GRUB_DEFAULT=1'/g -i /etc/default/grub
+    #sed s/'GRUB_DEFAULT=0'/'GRUB_DEFAULT=1'/g -i /etc/default/grub
     sed s/'GRUB_DISTRIBUTOR=*'/'#GRUB_DISTRIBUTOR='/g -i /etc/default/grub
     echo 'GRUB_DISTRIBUTOR=Recuperacao' >> /etc/default/grub
     sed s/'#GRUB_DISABLE_LINUX_UUID=true'/'GRUB_DISABLE_LINUX_UUID=true'/g -i /etc/default/grub
@@ -102,7 +116,9 @@ instala_risos() {
     rm -f /etc/grub.d/20_memtest86+
     mv /etc/grub.d/10_linux /etc/grub.d/50_linux
     update-grub
-    
+  
+    DisableUUID #modificacao
+  
     #Cria riso.service
     echo "Criando arquivo de configuração..."
     echo '<?xml version="1.0" standalone="no"?><!--*-nxml-*-->' > /etc/avahi/services/riso.service
@@ -117,15 +133,18 @@ instala_risos() {
     echo '-->' >> /etc/avahi/services/riso.service
     echo '' >> /etc/avahi/services/riso.service
     echo '<service-group>' >> /etc/avahi/services/riso.service
-    echo '  <name>Servidor RISO</name>' >> /etc/avahi/services/riso.service
+    echo '  <name>Servidor RISO DECOM</name>' >> /etc/avahi/services/riso.service
     echo '' >> /etc/avahi/services/riso.service
     echo '  <service>' >> /etc/avahi/services/riso.service
     echo '    <!--Nome do serviço-->' >> /etc/avahi/services/riso.service
-    echo "    <type>_RISO._tcp</type>" >> /etc/avahi/services/riso.service
+    echo "    <type>_DECOM_RISO._tcp</type>" >> /etc/avahi/services/riso.service
     echo '' >> /etc/avahi/services/riso.service
     echo '    <!--Campo não é usado-->' >> /etc/avahi/services/riso.service
     echo '    <port>1234</port>' >> /etc/avahi/services/riso.service
     echo '' >> /etc/avahi/services/riso.service
+    echo '    <!--Ip do servidor-->' >> /etc/avahi/services/riso.service # modifiçaco para guarda o ip do servidor
+    echo "    <txt-record>Servidor=$servidor</txt-record>" >> /etc/avahi/services/riso.service #
+    echo '' >> /etc/avahi/services/riso.service #
     echo '    <!--Variáveis com sistema de arquivo das partições-->' >> /etc/avahi/services/riso.service
     echo "    <txt-record>sa_partrec=${sa_partrec}</txt-record>" >> /etc/avahi/services/riso.service
     echo "    <txt-record>sa_partlinux=${sa_partlinux}</txt-record>" >> /etc/avahi/services/riso.service
